footer alignement fixed

--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -11,8 +11,13 @@
   }
 
   &.-footer {
+    .nav-list {
+      align-items: center;
+    }
+
     .nav-link {
       font-weight: normal;
+      text-align: center;
 
       &:hover:before {
         display: none;
